# gameEngine

./: CMakeLists.txt  README.md
src/: combatScene.cpp  combatScene.hpp  components.hpp  constants.hpp  eventHandler.cpp  eventHandler.hpp  game.cpp  game.hpp  luaFunctions.cpp  luaFunctions.hpp  main.cpp  renderer.cpp  renderer.hpp  systemHandler.cpp  systemHandler.hpp
src/scenes/: testScene.json
src/scripts/: movementSystem.lua  unitSystem.lua
